# yes24_clone

./: .env.example  .gitignore  Makefile  README.md  RESEARCH.md  TASK_V5.md  TASK_V6.md  TASK_V7.md  VULNERABILITIES.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/scripts/: fix_descriptions.py  seed_fundings.py
backend/sql/: init.sql
backend/src/yes24_clone/: config.py  main.py
backend/src/yes24_clone/api/: admin.py  auth.py  banners.py  cart.py  categories.py  checkout.py  coupons.py  customer.py  deps.py  fundings.py  orders.py  pages.py  products.py  qna.py  reviews.py  search.py  users.py  vuln.py  wishlist.py
backend/src/yes24_clone/db/: session.py
backend/src/yes24_clone/models/: __init__.py  banner.py  cart.py  category.py  coupon.py  event.py  funding.py  order.py  product.py  qna.py  review.py  review_helpful.py  user.py  wishlist.py
backend/src/yes24_clone/schemas/: category.py  common.py  product.py  user.py
backend/src/yes24_clone/seed/: __main__.py  categories.json
frontend/: Dockerfile  next.config.js  package.json
frontend/lib/: api.ts  auth.tsx  constants.ts  types.ts
frontend/pages/: 404.tsx  _app.tsx  _document.tsx  index.tsx
frontend/styles/: category.module.css  globals.css  header.module.css  home.module.css  product.module.css
infra/scripts/: deploy.sh  destroy.sh  ssh.sh  status.sh
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf
nginx/: nginx.conf
scripts/: push-ecr.sh  reset-db.sh  seed.sh  test-vulns.sh  test_vulns.sh  verify.sh
(+44 files in other folders)
